<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <View
        android:id="@+id/title"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:background="@color/cajas"/>

    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintEnd_toEndOf="@id/title"
        android:text="@string/title"
        android:textColor="@color/textoCaja"
        android:textSize="10pt"
        android:textStyle="bold"
        android:textAlignment="center"/>


    <View
        android:id="@+id/cajaDatos"
        android:layout_width="350dp"
        android:layout_height="500dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/cajas"/>

    <TextView
        android:id="@+id/solicitudDatos"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/cajaDatos"
        app:layout_constraintStart_toStartOf="@+id/cajaDatos"
        app:layout_constraintEnd_toEndOf="@+id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@+id/cajaDatos"
        app:layout_constraintVertical_bias="0"
        android:text="@string/solicitud_datos"
        android:textColor="@color/white"
        android:textSize="9pt"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/salarioBrutoPregunta"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/solicitudDatos"
        app:layout_constraintStart_toStartOf="@+id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@+id/cajaDatos"
        app:layout_constraintEnd_toStartOf="@id/salarioBrutoRespuesta"
        app:layout_constraintVertical_bias="0.05"
        android:text="@string/salario_bruto_anual"
        android:textColor="@color/white"
        android:textSize="8pt"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/salarioBrutoRespuesta"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/solicitudDatos"
        app:layout_constraintStart_toEndOf="@+id/salarioBrutoPregunta"
        app:layout_constraintEnd_toEndOf="@+id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@id/cajaDatos"
        app:layout_constraintVertical_bias="0.04"
        android:textSize="6pt"
        android:inputType="numberDecimal"
        android:hint="@string/salario_bruto_anual2"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/numPagasPregunta"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/salarioBrutoPregunta"
        app:layout_constraintStart_toStartOf="@+id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@+id/cajaDatos"
        app:layout_constraintEnd_toStartOf="@id/numPagasRespuesta"
        app:layout_constraintVertical_bias="0.01"
        android:text="@string/numero_de_pagas"
        android:textColor="@color/white"
        android:textSize="8pt"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/numPagasRespuesta"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/salarioBrutoRespuesta"
        app:layout_constraintStart_toEndOf="@+id/numPagasPregunta"
        app:layout_constraintEnd_toEndOf="@+id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@id/cajaDatos"
        app:layout_constraintVertical_bias="0"
        android:textSize="6pt"
        android:inputType="number"
        android:hint="@string/numero_de_pagas2"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/edadPregunta"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/numPagasPregunta"
        app:layout_constraintStart_toStartOf="@+id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@+id/cajaDatos"
        app:layout_constraintEnd_toStartOf="@id/edadRespuesta"
        app:layout_constraintVertical_bias="0.01"
        android:text="@string/edad"
        android:textColor="@color/white"
        android:textSize="8pt"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/edadRespuesta"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/numPagasRespuesta"
        app:layout_constraintStart_toEndOf="@+id/edadPregunta"
        app:layout_constraintEnd_toEndOf="@+id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@id/cajaDatos"
        app:layout_constraintVertical_bias="0"
        android:textSize="6pt"
        android:inputType="number"
        android:hint="@string/edad2"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:textColor="@color/white"
        />


    <TextView
        android:id="@+id/grupoPregunta"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/edadPregunta"
        app:layout_constraintStart_toStartOf="@+id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@+id/cajaDatos"
        app:layout_constraintEnd_toStartOf="@id/grupoRespuesta"
        app:layout_constraintVertical_bias="0.01"
        android:text="@string/grupo_profesional"
        android:textColor="@color/white"
        android:textSize="8pt"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/grupoRespuesta"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/edadRespuesta"
        app:layout_constraintStart_toEndOf="@+id/grupoPregunta"
        app:layout_constraintEnd_toEndOf="@+id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@id/cajaDatos"
        app:layout_constraintVertical_bias="0.015"
        android:textSize="6pt"
        android:hint="@string/grupo_profesional2"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:textColor="@color/white"
        />


    <TextView
        android:id="@+id/discapacidadPregunta"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/grupoPregunta"
        app:layout_constraintStart_toStartOf="@+id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@+id/cajaDatos"
        app:layout_constraintEnd_toStartOf="@id/discapacidadRespuesta"
        app:layout_constraintVertical_bias="0.01"
        android:text="@string/grado_discapacidad"
        android:textColor="@color/white"
        android:textSize="7pt"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/discapacidadRespuesta"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/grupoRespuesta"
        app:layout_constraintStart_toEndOf="@+id/discapacidadPregunta"
        app:layout_constraintEnd_toEndOf="@+id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@id/cajaDatos"
        app:layout_constraintVertical_bias="0.015"
        android:inputType="number"
        android:textSize="6pt"
        android:hint="@string/grado_discapacidad2"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:textColor="@color/white"
        />


    <TextView
        android:id="@+id/estadoPregunta"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/discapacidadPregunta"
        app:layout_constraintStart_toStartOf="@+id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@+id/cajaDatos"
        app:layout_constraintEnd_toStartOf="@id/estadoRespuesta"
        app:layout_constraintVertical_bias="0.01"
        android:text="@string/estado_civil"
        android:textColor="@color/white"
        android:textSize="8pt"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/estadoRespuesta"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/discapacidadRespuesta"
        app:layout_constraintStart_toEndOf="@+id/estadoPregunta"
        app:layout_constraintEnd_toEndOf="@+id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@id/cajaDatos"
        app:layout_constraintVertical_bias="0.015"
        android:hint="@string/estado_civil2"
        android:textSize="6pt"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:textColor="@color/white"
        />


    <TextView
        android:id="@+id/hijosPregunta"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/estadoPregunta"
        app:layout_constraintStart_toStartOf="@+id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@+id/cajaDatos"
        app:layout_constraintEnd_toStartOf="@id/hijosRespuesta"
        app:layout_constraintVertical_bias="0.01"
        android:text="@string/num_hijos"
        android:textColor="@color/white"
        android:textSize="8pt"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/hijosRespuesta"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/estadoRespuesta"
        app:layout_constraintStart_toEndOf="@+id/hijosPregunta"
        app:layout_constraintEnd_toEndOf="@+id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@id/cajaDatos"
        app:layout_constraintVertical_bias="0.015"
        android:inputType="number"
        android:hint="@string/num_hijos2"
        android:textSize="6pt"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:textColor="@color/white"
        />
    
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enviarDatos"
        android:layout_width="150dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/hijosPregunta"
        app:layout_constraintStart_toStartOf="@+id/cajaDatos"
        app:layout_constraintEnd_toEndOf="@id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@id/cajaDatos"
        android:background="@color/black"
        android:text="@string/enviar_datos"
        android:textColor="@color/textoCaja"
        android:textStyle="bold"
        android:textSize="10pt"
        />

</androidx.constraintlayout.widget.ConstraintLayout>