<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculadora"
    android:background="@color/background">


    <View
        android:id="@+id/resultados"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:background="@color/cajas"/>

    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/resultados"
        app:layout_constraintBottom_toBottomOf="@+id/resultados"
        app:layout_constraintStart_toStartOf="@+id/resultados"
        app:layout_constraintEnd_toEndOf="@id/resultados"
        android:text="@string/resultados"
        android:textColor="@color/textoCaja"
        android:textSize="10pt"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <View
        android:id="@+id/cajaDatos"
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:layout_constraintTop_toBottomOf="@+id/resultados"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/cajas"/>


    <TextView
        android:id="@+id/salarioBruto"
        android:layout_width="340dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@+id/cajaDatos"
        app:layout_constraintStart_toStartOf="@+id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@+id/cajaDatos"
        app:layout_constraintEnd_toEndOf="@id/cajaDatos"
        app:layout_constraintVertical_bias="0.1"
        android:hint="@string/salario_bruto_mensual"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="8pt"
        android:textAlignment="center"
        android:textStyle="bold"
        />



    <TextView
        android:id="@+id/retencionIRPF"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/salarioBruto"
        app:layout_constraintStart_toStartOf="@+id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@+id/cajaDatos"
        app:layout_constraintEnd_toStartOf="@id/deducciones"
        app:layout_constraintVertical_bias="0.3"
        android:hint="@string/irpf"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="8pt"
        android:textAlignment="center"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/deducciones"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/salarioBruto"
        app:layout_constraintStart_toEndOf="@+id/retencionIRPF"
        app:layout_constraintBottom_toBottomOf="@+id/cajaDatos"
        app:layout_constraintEnd_toEndOf="@id/cajaDatos"
        app:layout_constraintVertical_bias="0.3"
        android:hint="@string/deducciones"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="8pt"
        android:textAlignment="center"
        android:textStyle="italic"
        />


    <TextView
        android:id="@+id/salarioNeto"
        android:layout_width="340dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/retencionIRPF"
        app:layout_constraintStart_toStartOf="@+id/cajaDatos"
        app:layout_constraintBottom_toBottomOf="@+id/cajaDatos"
        app:layout_constraintEnd_toEndOf="@id/cajaDatos"
        app:layout_constraintVertical_bias="0.6"
        android:hint="@string/salario_neto_mensual"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="8pt"
        android:textAlignment="center"
        android:textStyle="bold"
        />




</androidx.constraintlayout.widget.ConstraintLayout>